# NYC-TAXI-Pipeline

./: .gitignore  README.md  pyproject.toml
astro_project/: Dockerfile  requirements.txt
astro_project/dags/: test_path.ipynb  ttt.ipynb
astro_project/include/ny_taxi/: dbt_project.yml  dev.duckdb  package-lock.yml
astro_project/include/ny_taxi/models/Staging/: sources.yml
astro_project/include/ny_taxi/models/mart/summary_table/: airport_fee.sql  borough.sql
astro_project/include/ny_taxi/seeds/: seeds_properties.yml
dags/: taxi_dag.py
dbt/: packages.yml
dbt/models/marts/: dim_zone.sql  fct_taxi_trips.sql
dbt/models/marts/summary_table/: rpt_monthly_summary.sql
dbt/models/staging/: stg_green.sql  stg_yellow.sql
dbt/seeds/: payment_type_lookup.csv
